# sot-talos

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  LICENSE  README.md  package.xml
doc/: Doxyfile.extra.in
doc/additionalHeader/: sot-talos-doc.hh
src/: CMakeLists.txt  sot-pyrene-controller.cpp  sot-pyrene-controller.hh  sot-talos-controller.cpp  sot-talos-controller.hh  sot-talos-device-python-module-py.cc  sot-talos-device-python.hh  sot-talos-device.cpp  sot-talos-device.hh
src/dynamic_graph/sot/pyrene/: prologue.py  robot.py  robot.py.in  seqplay.py
src/dynamic_graph/sot/talos/: __init__.py  prologue.py  robot.py  talos.py
tests/: appli-test-simple-seq-play.py  appli-test-simple-seq-play.py.cmake  appli-test-simple-seq-play.py.in  appli.py  appli_basic.py  katana_holding.py  katana_holding.py.cmake  kinetalos.py  kinetalos.py.cmake  publish-robot-state.py  run_motion_python_node.py  servooff.py  test-simple-seq-play.py  test.py  test_basic.py  test_seqplay.py
