<package format="2">
  <name>sot-talos</name>
  <version>1.3.0</version>
  <description>
    Stack of Tasks for Talos.
  </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <license>BSDv2</license>

  <url>http://github.com/stack-of-tasks/sot-talos</url>
  <author>Olivier Stasse</author>

  <build_depend>roscpp</build_depend>
  <build_depend>sot-dynamic-pinocchio</build_depend>
  <build_depend>talos_data</build_depend>
  <build_depend>pyrene-motions</build_depend>
  <build_depend>dynamic_graph_bridge</build_depend>
  <build_depend>dynamic_graph_bridge_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sot-dynamic-pinocchio</exec_depend>
  <exec_depend>talos_data</exec_depend>
  <exec_depend>pyrene-motions</exec_depend>
  <exec_depend>dynamic_graph_bridge</exec_depend>
  <exec_depend>dynamic_graph_bridge_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

</package>
